# disk-analyzer

./: .gitignore  Cargo.toml  README.md
docs/: Graveyard.md  Notes.md  Troubleshooting.md
src/: analyzer.rs  application.rs  application_gui.rs  config_window.rs  dir_walker.rs  directory.rs  entry.rs  input_path.rs  main.rs  ui.glade
src/display/: mod.rs
src/display/views/: directory.rs  mod.rs  start.rs
src/events/: handlers.rs  mod.rs
src/frontend/styling/: button.rs
src/frontend/views/: Start.rs
src/lib/: curry.rs
src/logic/: analyzer.rs  directory.rs  mod.rs
src/logic/directory/: directory.rs  mod.rs  traits.rs
