[package]
name = "disk_analyzer"
version = "2024.1.0"
authors = ["Blair Urish <burace17@gmail.com> + AJ Snow :3"]
edition = "2021"

[[bin]]
name = "disk_analyzer"
path = "src/entry.rs"

[package.metadata.'rust']
main = "src/entry.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = "*"
frunk = "*"
railsgun = "*"
humansize = "*"
mime_guess = "*"
thiserror = "*"
rpds = "*"
native-dialog = "0.7.0"
winapi = "0.3.9"
iced_futures = "0.7.0"
tokio = { version = "*",  features = ["sync"]}
futures = "0.3.30"
async-tungstenite = "0.24.0"
# iced_native = "0.10.3"
