[package]
name = "disk_analyzer"
version = "2024.1.0"
authors = ["Blair Urish <burace17@gmail.com> + AJ Snow :3"]
edition = "2021"

[[bin]]
name = "disk_analyzer"
path = "src/entry.rs"

[package.metadata.'rust']
main = "src/entry.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = "0.10.*"
frunk = "0.4.*"
railsgun = "3.*"
humansize = "2.*"
mime_guess = "2.*"
thiserror = "1.*"
rpds = "1.*"
native-dialog = "0.7.*"
winapi = "0.3.*"
iced_futures = "0.7.*"
tokio = { version = "1.*",  features = ["sync"]}
futures = "0.3.*"
async-tungstenite = "0.24.*"
futures-util = "0.3.*"
